--- a/PhotoLetter/Supporting Files/Info.plist
+++ b/PhotoLetter/Supporting Files/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Photo Letter가 당신의 앨범에 접근하려고 합니다</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Letter가 당신의 카메라에 접근하려고 합니다</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
